--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>The Booleaner</title>
 </head>
 <body>
-  
+  <header>
+    <img src="img/logo.svg" alt="logo" id="logo">
+  </header>
 </body>
 </html>
